<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".MainActivity2"
   >
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->



    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:textSize="25sp"
        android:text="@string/nick"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/bar2"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/slide1"
        android:contentDescription="@string/imgDescription" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_p"
                android:background="@color/purple_200"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/previous_image"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_n"
                android:background="@color/purple_200"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/next_image" />

        </LinearLayout>


            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_first"
                android:background="@color/purple_200"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/first_image"
                tools:ignore="NestedWeights" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_last"
                android:background="@color/purple_200"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/last_image" />

        </LinearLayout>

</LinearLayout>